--- a/wp-content/themes/astra-child/sass/_page_products.scss
+++ b/wp-content/themes/astra-child/sass/_page_products.scss
@@ -187,6 +187,9 @@
         }
     }
 
+    #main .related.products {
+        margin-bottom: -8px;
+    }
     .related.products {
         // @include bgGradient(to top, rgba-var(#f7f7f7, 0) 20%,rgba-var(#f7f7f7, 1) 100%);
         overflow: hidden;
@@ -204,6 +207,14 @@
         }
         > h2 {
             margin-bottom: 40px;
+        }
+        ul.products {
+            > li {
+                background-color: transparent;
+                .yith-add-to-wishlist-button-block {
+                    margin: 0 auto;
+                }
+            }
         }
     }
 }
